# command-center

./: CMakeLists.txt  README.md  install.sh
data/: command-center.desktop
src/: main.cpp
